# faiss

./: CMakeLists.txt  requirements.txt
demo/: big_search.sh  build_demo.py  hnsw_merge_shards.cpp  hnsw_partition_build_merge.py  large_graph_simple_build.py  plot_graph_struct.py  plot_graph_struct_big.py  prune_ablation.sh  simple_build.py  simple_build_diskann.py  simple_build_dpr.py  simple_build_nsg.py  simple_search.fish
faiss/: CMakeLists.txt  IndexHNSW.cpp  IndexHNSW.h  IndexNSG.cpp  index_io.h
faiss/impl/: AuxIndexStructures.h  DistanceComputer.h  HNSW.cpp  HNSW.h  HNSW_search.cpp  HNSW_zmq.cpp  HNSW_zmq.h  NSG.cpp  NSG.h  index_read.cpp  mapped_io.cpp  pq.cpp  pq.h
faiss/python/: CMakeLists.txt  __init__.py  faiss_example_external_module.swig  swigfaiss.swig
